--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  background: #d9e6f0;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+}
