--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
 body {
   background: #d9e6f0;
 }
@@ -7,4 +9,8 @@ body {
   margin: 0;
   padding: 0;
   text-decoration: none;
+  font-weight: normal;
+  font-style: normal;
 }
+
+
