enable prod mode for push to heroku

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -54,7 +54,7 @@
                         Date: {{currencyRateDate}}
                     </div>
                     <div class="currency">
-                        1 USD = {{exchangeRate | number : '1.5'}}
+                        1 USD = {{exchangeRate | number : '1.5'}} HKD
                     </div>
                 </div>
             </div>
