--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,5 +1,8 @@
 <main class="home-component" [hidden]="!dataLoaded">
     <section class="container">
+        <img [src]="url" height="200">
+        <br/>
+        <input type='file' (change)="onSelectFile($event)">
         <h1 class="title">
             Currency Exchange App
         </h1>
