--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,6 +1,7 @@
 <main class="home-component" [hidden]="!dataLoaded">
     <section class="container">
-        <img [src]="url" height="200">
+        {{url}}
+        <!--<img [src]="url" height="200">-->
         <br/>
         <input type='file' (change)="onSelectFile($event)">
         <h1 class="title">
