--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,32 +1,39 @@
-<form (ngSubmit)="loginSubmit()">
-    <label for="login_email">Email</label>
-    <input type="text" name="login_email" id="login_email" [(ngModel)]="loginFormObj.email">
-
-    <label for="login_password">Password</label>
-    <input type="login_password" name="login_password" id="login_password" [(ngModel)]="loginFormObj.password">
-
-    <button type="submit">
-        Login
-    </button>
-
-</form>
-
-
 <form (ngSubmit)="signUpSubmit()">
     <label for="first_name">First Name</label>
-    <input type="text" name="first_name" id="first_name" [(ngModel)]="signUpFormObj.email">
+    <input type="text" name="first_name" id="first_name" [(ngModel)]="signUpFormObj.firstName">
 
-    <label for="last_name">Password</label>
-    <input type="password" name="last_name" id="last_name" [(ngModel)]="signUpFormObj.password">
+    <label for="last_name">Last Name</label>
+    <input type="text" name="last_name" id="last_name" [(ngModel)]="signUpFormObj.lastName">
 
     <label for="signup_email">Email</label>
     <input type="text" name="signup_email" id="signup_email" [(ngModel)]="signUpFormObj.email">
+
+    <label for="avatar"></label>
+    <input type='file' id="avatar" (change)="onSelectFile($event)">
 
     <label for="signup_password">Password</label>
     <input type="password" name="signup_password" id="signup_password" [(ngModel)]="signUpFormObj.password">
 
     <button type="submit">
-        Login
+        Sign Up
     </button>
 
 </form>
+
+
+<!--<form (ngSubmit)="signUpSubmit()">-->
+<!--<label for="login_email">Email</label>-->
+<!--<input type="text" name="login_email" id="login_email" [(ngModel)]="loginFormObj.email">-->
+
+<!--<label for="login_password">Password</label>-->
+<!--<input type="login_password" name="login_password" id="login_password" [(ngModel)]="loginFormObj.password">-->
+
+<!--<label for="avatar"></label>-->
+<!--<input type='file' id="avatar" (change)="onSelectFile($event)">-->
+<!--<button type="submit">-->
+<!--Sign Up-->
+<!--</button>-->
+
+<!--</form>-->
+
+
