sign up progress

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,7 +8,7 @@
     <label for="signup_email">Email</label>
     <input type="text" name="signup_email" id="signup_email" [(ngModel)]="signUpFormObj.email">
 
-    <label for="avatar"></label>
+    <label for="avatar">Profile Picture</label>
     <input type='file' id="avatar" (change)="onSelectFile($event)">
 
     <label for="signup_password">Password</label>
