--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,11 +4,13 @@
 
     <label for="login_password">Password</label>
     <input type="login_password" name="login_password" id="login_password" [(ngModel)]="loginFormObj.password">
-    
+
     <button type="submit">
         Sign Up
     </button>
 
 </form>
+
+<button [routerLink]="['/main']">Go To Next Page</button>
 
 
