--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,16 +1,14 @@
-<form (ngSubmit)="signUpSubmit()">
+<form (ngSubmit)="loginSubmit()">
     <label for="login_email">Email</label>
     <input type="text" name="login_email" id="login_email" [(ngModel)]="loginFormObj.email">
 
     <label for="login_password">Password</label>
-    <input type="login_password" name="login_password" id="login_password" [(ngModel)]="loginFormObj.password">
+    <input type="password" name="login_password" id="login_password" [(ngModel)]="loginFormObj.password">
 
     <button type="submit">
-        Sign Up
+        Login
     </button>
 
 </form>
-
-<button [routerLink]="['/main']">Go To Next Page</button>
 
 
