jwt interceptor - account for third party apis

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,6 +1,6 @@
 <main class="home-component" [hidden]="!dataLoaded">
     <section class="container">
-        <input type='file' (change)="onSelectFile($event)">
+        <!--<input type='file' (change)="onSelectFile($event)">-->
         <h1 class="title">
             Currency Exchange App
         </h1>
