jwt, auth error interceptors, auth guard

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,3 +1,4 @@
+<button (click)="logout()">Logout</button>
 <main class="home-component" [hidden]="!dataLoaded">
     <section class="container">
         <!--<input type='file' (change)="onSelectFile($event)">-->
